# pynurbs

./: .gitignore  README.md  codecov.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: build.yaml  codecov.yaml  codecov.yml  publish.yaml  tests.yml
Bspline/: Bspline.py  test_bspline.py  useful_functions.py
docs/source/: conf.py  index.rst  requirements_docs.txt
docs/source/rst/: advanced.rst  basics.rst  basisfunction.rst  calculus.rst  curve.rst  custom_objects.rst  features.rst  fitting.rst  installation.rst  knotvector.rst  motivation.rst  references.rst  theory-derivative.rst  theory-fitting.rst  theory-integration.rst  theory-knotvector.rst  theory.rst  tutorial.rst
docs/source/sphinx_gallery_examples/: index.rst
examples/: examples1.ipynb  examples2.ipynb  examples3.ipynb
src/compmec/nurbs/: __classes__.py  __init__.py  advanced.py  algorithms.py  approx.py  basefunctions.py  calculus.py  curves.py  degreeoperations.py  functions.py  heavy.py  interpolate.py  knotoperations.py  knotspace.py  spaceu.py  test_regression.py
src/pynurbs/: __init__.py  advanced.py  calculus.py  curves.py  functions.py  heavy.py  knotspace.py
tests/: test_advanced.py  test_algorithms.py  test_basefunctions.py  test_beziercurve.py  test_bspline.py  test_calculus.py  test_curve.py  test_curves.py  test_customstruc.py  test_degreeoperations.py  test_derivatebspline.py  test_fitting.py  test_functions.py  test_heavy.py  test_insertknot.py  test_interpolation.py  test_knotoperations.py  test_knotspace.py  test_rationalcurve.py  test_regression.py  test_spaceu.py  test_splinecurve.py
theory/: BasicBSpline.ipynb
