[metadata]
name = compmec-nurbs
version = 0.1.0
description = Nurbs library
url = https://github.com/compmec/nurbs
author = Carlos Leite
author_email = compmecgit@gmail.com
license = GPL3.0
license_file = LICENSE.md
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages = find_namespace:
install_requires =
    numpy>=1
python_requires = >=3.6
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-dependency>=0.5
    tox>=3.24